--- a/a1/student/exploring_word_vectors_22_23.ipynb
+++ b/a1/student/exploring_word_vectors_22_23.ipynb
@@ -21,11 +21,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "8AGQxROrSStf"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "[nltk_data] Downloading package reuters to /home/mahsa/nltk_data...\n",
+            "[nltk_data]   Package reuters is already up-to-date!\n"
+          ]
+        }
+      ],
       "source": [
         "# All Import Statements Defined Here\n",
         "# Note: Do not add to this list.\n",
@@ -145,7 +154,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "xwD2htUoSStw"
       },
@@ -173,12 +182,47 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
-        "scrolled": false,
-        "id": "mC7B9Cb-SSty"
+        "id": "mC7B9Cb-SSty",
+        "scrolled": false
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[['<START>', 'western', 'mining', 'to', 'open', 'new', 'gold', 'mine', 'in', 'australia', 'western',\n",
+            "  'mining', 'corp', 'holdings', 'ltd', '&', 'lt', ';', 'wmng', '.', 's', '>', '(', 'wmc', ')',\n",
+            "  'said', 'it', 'will', 'establish', 'a', 'new', 'joint', 'venture', 'gold', 'mine', 'in', 'the',\n",
+            "  'northern', 'territory', 'at', 'a', 'cost', 'of', 'about', '21', 'mln', 'dlrs', '.', 'the',\n",
+            "  'mine', ',', 'to', 'be', 'known', 'as', 'the', 'goodall', 'project', ',', 'will', 'be', 'owned',\n",
+            "  '60', 'pct', 'by', 'wmc', 'and', '40', 'pct', 'by', 'a', 'local', 'w', '.', 'r', '.', 'grace',\n",
+            "  'and', 'co', '&', 'lt', ';', 'gra', '>', 'unit', '.', 'it', 'is', 'located', '30', 'kms', 'east',\n",
+            "  'of', 'the', 'adelaide', 'river', 'at', 'mt', '.', 'bundey', ',', 'wmc', 'said', 'in', 'a',\n",
+            "  'statement', 'it', 'said', 'the', 'open', '-', 'pit', 'mine', ',', 'with', 'a', 'conventional',\n",
+            "  'leach', 'treatment', 'plant', ',', 'is', 'expected', 'to', 'produce', 'about', '50', ',', '000',\n",
+            "  'ounces', 'of', 'gold', 'in', 'its', 'first', 'year', 'of', 'production', 'from', 'mid', '-',\n",
+            "  '1988', '.', 'annual', 'ore', 'capacity', 'will', 'be', 'about', '750', ',', '000', 'tonnes', '.',\n",
+            "  '<END>'],\n",
+            " ['<START>', 'belgium', 'to', 'issue', 'gold', 'warrants', ',', 'sources', 'say', 'belgium',\n",
+            "  'plans', 'to', 'issue', 'swiss', 'franc', 'warrants', 'to', 'buy', 'gold', ',', 'with', 'credit',\n",
+            "  'suisse', 'as', 'lead', 'manager', ',', 'market', 'sources', 'said', '.', 'no', 'confirmation',\n",
+            "  'or', 'further', 'details', 'were', 'immediately', 'available', '.', '<END>'],\n",
+            " ['<START>', 'belgium', 'launches', 'bonds', 'with', 'gold', 'warrants', 'the', 'kingdom', 'of',\n",
+            "  'belgium', 'is', 'launching', '100', 'mln', 'swiss', 'francs', 'of', 'seven', 'year', 'notes',\n",
+            "  'with', 'warrants', 'attached', 'to', 'buy', 'gold', ',', 'lead', 'mananger', 'credit', 'suisse',\n",
+            "  'said', '.', 'the', 'notes', 'themselves', 'have', 'a', '3', '-', '3', '/', '8', 'pct', 'coupon',\n",
+            "  'and', 'are', 'priced', 'at', 'par', '.', 'payment', 'is', 'due', 'april', '30', ',', '1987',\n",
+            "  'and', 'final', 'maturity', 'april', '30', ',', '1994', '.', 'each', '50', ',', '000', 'franc',\n",
+            "  'note', 'carries', '15', 'warrants', '.', 'two', 'warrants', 'are', 'required', 'to', 'allow',\n",
+            "  'the', 'holder', 'to', 'buy', '100', 'grammes', 'of', 'gold', 'at', 'a', 'price', 'of', '2', ',',\n",
+            "  '450', 'francs', ',', 'during', 'the', 'entire', 'life', 'of', 'the', 'bond', '.', 'the',\n",
+            "  'latest', 'gold', 'price', 'in', 'zurich', 'was', '2', ',', '045', '/', '2', ',', '070', 'francs',\n",
+            "  'per', '100', 'grammes', '.', '<END>']]\n"
+          ]
+        }
+      ],
       "source": [
         "reuters_corpus = read_corpus()\n",
         "pprint.pprint(reuters_corpus[:3], compact=True, width=100)"
@@ -201,7 +245,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "id": "NjJABbVFSSt1"
       },
@@ -217,9 +261,12 @@
         "    \"\"\"\n",
         "    corpus_words = []\n",
         "    n_corpus_words = -1\n",
-        "    \n",
+        "\n",
         "    ### SOLUTION BEGIN\n",
-        "    \n",
+        "    corpus_words = {word for doc in corpus for word in doc}\n",
+        "    corpus_words = sorted(list(corpus_words))\n",
+        "    n_corpus_words = len(corpus_words)\n",
+        "\n",
         "    ### SOLUTION END\n",
         "\n",
         "    return corpus_words, n_corpus_words"
@@ -227,11 +274,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "id": "iKfXBXySSSt3"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "--------------------------------------------------------------------------------\n",
+            "Passed All Tests!\n",
+            "--------------------------------------------------------------------------------\n"
+          ]
+        }
+      ],
       "source": [
         "# ---------------------\n",
         "# Run this sanity check\n",
@@ -271,7 +328,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
         "id": "v8MIy3KDSSt6"
       },
@@ -279,27 +336,40 @@
       "source": [
         "def compute_co_occurrence_matrix(corpus, window_size=4):\n",
         "    \"\"\" Compute co-occurrence matrix for the given corpus and window_size (default of 4).\n",
-        "    \n",
+        "\n",
         "        Note: Each word in a document should be at the center of a window. Words near edges will have a smaller\n",
         "              number of co-occurring words.\n",
-        "              \n",
+        "\n",
         "              For example, if we take the document \"<START> All that glitters is not gold <END>\" with window size of 4,\n",
         "              \"All\" will co-occur with \"<START>\", \"that\", \"glitters\", \"is\", and \"not\".\n",
-        "    \n",
+        "\n",
         "        Params:\n",
         "            corpus (list of list of strings): corpus of documents\n",
         "            window_size (int): size of context window\n",
         "        Return:\n",
-        "            M (a symmetric numpy matrix of shape (number of unique words in the corpus , number of unique words in the corpus)): \n",
-        "                Co-occurence matrix of word counts. \n",
+        "            M (a symmetric numpy matrix of shape (number of unique words in the corpus , number of unique words in the corpus)):\n",
+        "                Co-occurence matrix of word counts.\n",
         "                The ordering of the words in the rows/columns should be the same as the ordering of the words given by the distinct_words function.\n",
         "            word2ind (dict): dictionary that maps word to index (i.e. row/column number) for matrix M.\n",
         "    \"\"\"\n",
         "    words, n_words = distinct_words(corpus)\n",
         "    M = None\n",
         "    word2ind = {}\n",
-        "    \n",
+        "\n",
         "    ### SOLUTION BEGIN\n",
+        "\n",
+        "    word2ind = {word:i for i, word in enumerate(words)}\n",
+        "\n",
+        "    M = np.zeros((n_words, n_words))\n",
+        "    for body in corpus:\n",
+        "        for curr_idx, word in enumerate(body):\n",
+        "            for window_idx in range(-window_size, window_size + 1):\n",
+        "                neighbor_idx = curr_idx + window_idx\n",
+        "                if (neighbor_idx < 0) or (neighbor_idx >= len(body)) or (curr_idx == neighbor_idx):\n",
+        "                    continue\n",
+        "                co_occur_word = body[neighbor_idx]\n",
+        "                (word_idx, co_occur_idx) = (word2ind[word], word2ind[co_occur_word])\n",
+        "                M[word_idx, co_occur_idx] += 1\n",
         "\n",
         "    ### SOLUTION END\n",
         "\n",
@@ -308,11 +378,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
         "id": "u-6ID1qhSSt7"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "--------------------------------------------------------------------------------\n",
+            "Passed All Tests!\n",
+            "--------------------------------------------------------------------------------\n"
+          ]
+        }
+      ],
       "source": [
         "# ---------------------\n",
         "# Run this sanity check\n",
@@ -380,7 +460,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "id": "truGMjifSSt9"
       },
@@ -390,20 +470,22 @@
         "    \"\"\" Reduce a co-occurence count matrix of dimensionality (num_corpus_words, num_corpus_words)\n",
         "        to a matrix of dimensionality (num_corpus_words, k) using the following SVD function from Scikit-Learn:\n",
         "            - http://scikit-learn.org/stable/modules/generated/sklearn.decomposition.TruncatedSVD.html\n",
-        "    \n",
+        "\n",
         "        Params:\n",
         "            M (numpy matrix of shape (number of unique words in the corpus , number of unique words in the corpus)): co-occurence matrix of word counts\n",
         "            k (int): embedding size of each word after dimension reduction\n",
         "        Return:\n",
         "            M_reduced (numpy matrix of shape (number of corpus words, k)): matrix of k-dimensioal word embeddings.\n",
         "                    In terms of the SVD from math class, this actually returns U * S\n",
-        "    \"\"\"    \n",
+        "    \"\"\"\n",
         "    n_iters = 10     # Use this parameter in your call to `TruncatedSVD`\n",
         "    M_reduced = None\n",
         "    print(\"Running Truncated SVD over %i words...\" % (M.shape[0]))\n",
-        "    \n",
+        "\n",
         "    ### SOLUTION BEGIN\n",
-        "        \n",
+        "\n",
+        "    svd = TruncatedSVD(n_components=k, n_iter=n_iters)\n",
+        "    M_reduced = svd.fit_transform(M)\n",
         "    ### SOLUTION END\n",
         "\n",
         "    print(\"Done.\")\n",
@@ -412,11 +494,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
         "id": "7pqKuqvhSSt-"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Running Truncated SVD over 10 words...\n",
+            "Done.\n",
+            "--------------------------------------------------------------------------------\n",
+            "Passed All Tests!\n",
+            "--------------------------------------------------------------------------------\n"
+          ]
+        }
+      ],
       "source": [
         "# ---------------------\n",
         "# Run this sanity check\n",
@@ -519,8 +613,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "scrolled": false,
-        "id": "7L1Uk50mSSuD"
+        "id": "7L1Uk50mSSuD",
+        "scrolled": false
       },
       "outputs": [],
       "source": [
@@ -625,8 +719,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "scrolled": true,
-        "id": "JCvVlSLZSSuJ"
+        "id": "JCvVlSLZSSuJ",
+        "scrolled": true
       },
       "outputs": [],
       "source": [
@@ -648,15 +742,15 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "#!pip install gensim --upgrade\n",
-        "#!pip install numpy --upgrade"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "ZlF5fxSXcq95"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "#!pip install gensim --upgrade\n",
+        "#!pip install numpy --upgrade"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -763,8 +857,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "scrolled": true,
-        "id": "9kHRkjz6SSuO"
+        "id": "9kHRkjz6SSuO",
+        "scrolled": true
       },
       "outputs": [],
       "source": [
@@ -1001,6 +1095,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "dhzQJMYYVSjf"
+      },
+      "outputs": [],
       "source": [
         "### SOLUTION BEGIN\n",
         "\n",
@@ -1008,12 +1107,7 @@
         "assert wv_from_bin.most_similar(positive=[a, y], negative=[x])[0][0] == b\n",
         "\n",
         "### SOLUTION END"
-      ],
-      "metadata": {
-        "id": "dhzQJMYYVSjf"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1069,6 +1163,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "D_rlci42XQTw"
+      },
+      "outputs": [],
       "source": [
         "### SOLUTION BEGIN\n",
         "\n",
@@ -1076,12 +1175,7 @@
         "pprint.pprint(wv_from_bin.most_similar(positive=[a, y], negative=[x]))\n",
         "\n",
         "### SOLUTION END"
-      ],
-      "metadata": {
-        "id": "D_rlci42XQTw"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1239,8 +1333,11 @@
   ],
   "metadata": {
     "anaconda-cloud": {},
+    "colab": {
+      "provenance": []
+    },
     "kernelspec": {
-      "display_name": "Python 3 (ipykernel)",
+      "display_name": "cs224n",
       "language": "python",
       "name": "python3"
     },
@@ -1254,10 +1351,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.7"
-    },
-    "colab": {
-      "provenance": []
+      "version": "3.11.5"
     }
   },
   "nbformat": 4,
