--- a/a1/student/exploring_word_vectors_22_23.ipynb
+++ b/a1/student/exploring_word_vectors_22_23.ipynb
@@ -1582,9 +1582,9 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "cs224n",
+      "display_name": "ml",
       "language": "python",
-      "name": "python3"
+      "name": "ml"
     },
     "language_info": {
       "codemirror_mode": {
@@ -1596,7 +1596,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.5"
+      "version": "3.9.16"
     }
   },
   "nbformat": 4,
